# deepagents

./: .env.template  .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/: conversational_research_README.md  conversational_research_example.py  dialogue_example.py  research_example.py  test.py  test_debug.py  test_final.py  test_subagents.py  test_x402.py
src/: __init__.py  agent.py  agent_state.py  llm.py  main.py  state.py  tool_registry.py  tools.py
src/tools/: __init__.py  complete_task.py  internet_search.py  invoke_subagent.py  ls.py  read_file.py  write_file.py
