[project]
name = "deepagents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "httpx>=0.28.1",
    "eth-account>=0.13.7",
    "honcho-ai>=1.3.0",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.7",
    "tavily-python>=0.7.10",
    "x402>=0.2.1",
]
